# rda-globus-search

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/gdex_globus_search/: main.py
src/gdex_globus_search/lib/: auth.py  search.py
src/lib/: __init__.py
src/rda_globus_search/: assembler.py  extractor.py  ingester.py  main.py  manage_index.py  manage_subject.py  query.py  submitter.py  watcher.py
src/rda_globus_search/lib/: __init__.py  auth.py  database.py  search.py
tests/: test_app.py
