[build-system]
requires = [
  "setuptools>=61.0",
  "globus_sdk",
  "psycopg2",
  "pyyaml",
  "rda_python_common",
]
build-backend = "setuptools.build_meta"

[project]
name = "rda_globus_search"
version = "1.0.0"
authors = [
  { name="Thomas Cram", email="tcram@ucar.edu" },
]
description = "Python package to extract, assemble, and ingest NSF NCAR RDA dataset metadata into a Globus Search index"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-globus-search"
